test_inputs/valid/02_precedence_mix.mt
@triton.jit
def math(a, b, c, d, e): {
  out = a + b * c - d / e;
}
