test_inputs/invalid/07_bad_assignment_form.mt
@triton.jit
def bad_assign(x): {
  1 = x;
}
